test/functions/compilation-errors/value-for-arg-type.chpl

var myVar: int;
proc p1(arg: myVar) { }
p1(5);

proc p2(arg: 1+2) { }
p2(6);

proc p3(arg: Locales.size) { }
p3(7);

proc p4(arg: here.numPUs()) { }
p4(8);
